--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20953,3 +20953,30 @@ input[type="radio"]:checked {
     font-size: 13px;
     line-height: normal;
 }
+.deletecomment{
+    position: absolute;
+    background-color: #7f7f7fbd;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    display: none;
+}
+.commentedit{
+    position: absolute;
+    background-color: #7f7f7fbd;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    display: none;
+}
+.commentedit form{
+    padding: 10px;
+}
+.deletecomment .buttons{
+    text-align: center;
+    margin-top: 60;
+}
+.reply-card{
+    max-width: 90%;
+    float: right !important;
+}
